00-vsts-linux-build-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vstslinuxbuild
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vstslinuxbuild
  template:
    metadata:
      labels:
        app: vstslinuxbuild
    spec:
      containers:
      - name: vstslinuxbuild
        image: denhamparry/buildagent
        ports:
        - containerPort: 443
        volumeMounts:
          - name: docker-graph-storage
            mountPath: /var/lib/docker
      volumes:
        - name: docker-graph-storage
          emptyDir: {}
