01-vsts-linux-build-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vstslinuxbuild
spec:
  ports:
  - port: 80
    name: web
    protocol: TCP
    targetPort: 80
  - port: 8080
    name: web2
    protocol: TCP
    targetPort: 8080
  - port: 443
    name: secureweb
    protocol: TCP
    targetPort: 443
  selector:
    app: vstslinuxbuild
  type: ClusterIP
