04-vsts-linux-build-ingress.template.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vstslinuxbuild
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - <<your dns name>>
    secretName: tls-secret
  rules:
  - host: <<your dns name>>
    http:
      paths:
      - path: /
        backend:
          serviceName: vstslinuxbuild
          servicePort: 80
      - path: /
        backend:
          serviceName: vstslinuxbuild
          servicePort: 443
